# swapx-multiversx-rust

./: .gitignore  Cargo.toml  README.md  build.sh  deploy.sh  deploy_output.txt
frontend/: app.js  index.html  styles.css
scripts/: deploy.sh  query.sh  verify_deploy.sh
src/: swap.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
